@@ -13,6 +13,8 @@
 * Ghost save button, rather than hiding save dialogue if all pages removed.
   Closes bug #253 (Save dialoque does not stay open)
 * Fixed bug causing profile dropdown to be cleared after setting profile
+* Filter out integers from tool warnings, analogous to the hex warnings from
+  unpaper.
 
 
 1.8.6 (22.08.2017):
